--- a/app/src/main/res/layout/activity_segitiga.xml
+++ b/app/src/main/res/layout/activity_segitiga.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="30dp"
     tools:context=".SegitigaActivity">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="180dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
         android:contentDescription="gambar segitiga"
         android:src="@drawable/segitiga" />
 
@@ -19,7 +20,6 @@
         android:id="@+id/box2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:background="@drawable/box1_bg"
         android:orientation="vertical"
         android:paddingHorizontal="20dp"
@@ -62,10 +62,11 @@
             android:paddingStart="10dp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_hitung_persegi_panjang"
+            android:id="@+id/btn_hitung_segitiga"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_hitung_bg"
+            android:hint="Hasil"
             android:text="Hitung"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -74,10 +75,19 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/ket_luas_segitiga"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Luas segitiga adalah:"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/tv_hasil_segitiga"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/box2"
         android:layout_marginTop="20dp"
         android:background="@drawable/hasil_bg"
         android:hint="Hasil"
@@ -87,4 +97,4 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-</RelativeLayout>
+</LinearLayout>
