--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -47,7 +47,9 @@
             android:background="@drawable/box1_btn_bg"
             android:text="@string/persegi"
             android:textAllCaps="false"
-            android:textSize="20sp" />
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_persegi_panjang"
@@ -57,7 +59,9 @@
             android:background="@drawable/box1_btn_bg"
             android:text="@string/persegi_panjang"
             android:textAllCaps="false"
-            android:textSize="20sp" />
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_segitiga"
@@ -66,7 +70,9 @@
             android:background="@drawable/box1_btn_bg"
             android:text="@string/segitiga"
             android:textAllCaps="false"
-            android:textSize="20sp" />
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 
