--- a/app/src/main/res/layout/activity_persegi.xml
+++ b/app/src/main/res/layout/activity_persegi.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="30dp"
     tools:context=".PersegiActivity">
@@ -47,7 +48,9 @@
             android:inputType="numberDecimal"
             android:minHeight="48dp"
             android:paddingVertical="10dp"
-            android:paddingStart="10dp" />
+            android:paddingStart="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_hitung_persegi"
@@ -57,7 +60,8 @@
             android:text="Hitung"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -81,6 +85,7 @@
         android:paddingVertical="10dp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textColorHint="@color/grey"
         android:textSize="20sp"
         android:textStyle="bold" />
 
