--- a/app/src/main/res/drawable/box1_bg.xml
+++ b/app/src/main/res/drawable/box1_bg.xml
@@ -6,6 +6,6 @@
     <gradient
         android:angle="135"
         android:endColor="#2193b0"
-        android:startColor="#6dd5ed" />
+        android:startColor="#DF3601" />
 
 </shape>
